assets/css/style.scss
/* ... */
@media all and (display-mode: standalone) {
	* {
		//prevent the text to be selected everywhere in PWA
		-webkit-user-select: none;
		user-select: none;
	}
}

html {
	overscroll-behavior-y: none;
	text-size-adjust: none;
	-webkit-text-size-adjust: none;
	-moz-text-size-adjust: none;
	-ms-text-size-adjust: none;
	overflow-x: hidden;
	background: var(--background);
	//leave background here for smooth opacity transition
}

body {
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	margin: 0;
	width: 100vw;
	//fallback
	min-height: 100vh;
	min-height: 100dvh;
	overflow: hidden;
	background: var(--background);
}

img,
br {
	-webkit-user-select: none;
	user-select: none;
}

//do not display alt text while loading on firefox
img {
	color: transparent;
}

//broken image alt text
img[alt]:before {
	content: attr(alt);
	position: absolute;
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	font-weight: 300;
	background-color: var(--lazy-load-background);
	color: var(--text);
	border-radius: inherit;
}

//disable link previews in safari which scramble buttons up
a {
	-webkit-touch-callout: none;
}

.flex {
	display: flex;
}

.pagefixed {
	position: fixed;
	pointer-events: none;
}

.invisible {
	visibility: hidden;
}

.blink {
	animation: blink 1.5s infinite;
}

@media (prefers-color-scheme: light) {
	@keyframes blink {
		0% {
			filter: brightness(1);
		}

		50% {
			filter: brightness(0.9);
		}

		100% {
			filter: brightness(1);
		}
	}
}

@media (prefers-color-scheme: dark) {
	@keyframes blink {
		0% {
			filter: brightness(1);
		}

		50% {
			filter: brightness(1.2);
		}

		100% {
			filter: brightness(1);
		}
	}
}

body,
a,
button {
	color: var(--text);
}

p {
	margin: 0 0 18px;
}

.noanim {
	transition: none !important;
}

.noanim-all,
.noanim-all * {
	transition: none !important;
}

:focus-visible {
	outline: none;
}

@media (prefers-color-scheme: light) {
	.dark {
		display: none;
	}
}

@media (prefers-color-scheme: dark) {
	.light {
		display: none;
	}
}

@media only screen and (max-width: 1023px) {
	.hide-1024 {
		display: none !important;
	}
}

@media only screen and (min-width: 1024px) {
	.show-1024 {
		display: none !important;
	}
}

/********************************************************************************
*************************** Navigation specific (js) ****************************
/********************************************************************************/
#circle-reveal {
	position: fixed;
	width: 1px;
	height: 1px;
	background: var(--circle);
	border-radius: 50%;
	transform: scale(1);
	transition: transform .5s cubic-bezier(0.25, 0.46, 0.45, 0.94), opacity .3s ease;
	opacity: 0.5;
	//z-index must be set accordingly to navbar and popups
	z-index: 500;
}

#circle-reveal.fadeout {
	opacity: 0 !important;
}

#navigation_container {
	width: 100vw;
	//fallback
	min-height: 100vh;
	min-height: 100dvh;
	display: flex;
	flex-direction: column;
	//Move up the same height as navbar
	padding-top: var(--navbar-noshrink);
	opacity: 0;
	transition: opacity .1s ease, transform .4s ease;
}

#navigation_container.ready {
	opacity: 1;
	transform: none;
}

#navigation_container.navigate-back.inverse {
	transform: translateX(-200px);
}

#navigation_container.navigate-forward.inverse {
	transform: translateX(200px);
}

#navigation_container.navigate-forward {
	opacity: 0;
	transform: translateX(-200px);
}

#navigation_container.navigate-back {
	opacity: 0;
	transform: translateX(200px);
}

/********************************************************************************
*************************** Page paddings and styles ****************************
/********************************************************************************/
.content {
	background: var(--background);
}

#footer,
.content {
	margin: 0 20vw 0;
}

@media only screen and (max-width: 2100px) {

	#footer,
	.content {
		margin: 0 16vw 0;
	}
}

@media only screen and (max-width: 1600px) {

	#footer,
	.content {
		margin: 0 175px 0;
	}
}

@media only screen and (max-width: 1250px) {

	#footer,
	.content {
		margin: 0 75px 0;
	}
}

@media only screen and (max-width: 800px) {

	#footer,
	.content {
		margin: 0 50px 0;
	}
}

@media only screen and (max-width: 600px) {

	#footer,
	.content {
		margin: 0 20px 0;
	}
}

/********************************************************************************
************************************ Footer *************************************
/********************************************************************************/
#footer {
	-webkit-user-select: none;
	user-select: none;
	position: relative;
	margin-top: auto !important;
	text-align: center;
	padding: 20px 0;
	font-size: 15px;
	line-height: 20px;
}

@media only screen and (max-width: 1023px) {
	#footer {
		padding: 25px 0 95px;
	}
}

/********************************************************************************
************** Lazy load (ps. suggest to use on solid images only) **************
/********************************************************************************/
img.lazy-img {
	background: linear-gradient(110deg, var(--lazy-load-background) 12%, var(--lazy-load-shine) 21%, var(--lazy-load-background) 30%);
	background-size: 200% 100%;
	animation: 1.5s shine linear infinite;
}

img.lazy-img.lazy-complete {
	background: none;
}

@keyframes shine {
	100% {
		background-position-x: -200%;
	}
}

/********************************************************************************
********************************** Text styles **********************************
/********************************************************************************/
.main-title {
	-webkit-user-select: none;
	user-select: none;
	margin-top: 0;
	font-size: 40px;
	font-weight: 700;
}
/* ... */

